--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href="https://iagovirgilio.dev/" />
+    <meta name="Description" content="Lucre mais com sua empresa na internet por apenas R$ 279.">
+    <meta name="Description" content="Author: Iago Virgílio. Price: Por apenas R$ 279.">
+    <meta property = 'og:url' content = 'https://iagovirgilio.dev'>
+    <meta property = 'og:title' content = 'Iago Virgílio'>
+    <meta property = 'og:description' content = 'Lucre mais com sua empresa na internet por apenas R$ 279.'>
+    <meta name = 'keywords' content = 'Landing page, ecommerce, site, marketing digital, negócios, internet, lucre.'>
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Iago Virgílio</title>
 </head>
