--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
         gtag('config', 'UA-107707865-5');
     </script>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://iagovirgilio.dev/" />
@@ -21,6 +20,10 @@
     <meta property='og:title' content='Iago Virgílio'>
     <meta property='og:description' content='Lucre mais com sua empresa na internet por apenas R$ 279.'>
     <meta name='keywords' content='Landing page, ecommerce, site, marketing digital, negócios, internet, lucre.'>
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Iago Virgílio</title>
     <!-- Facebook Pixel Code -->
@@ -28,7 +31,7 @@
         !function (f, b, e, v, n, t, s) {
             if (f.fbq) return; n = f.fbq = function () {
                 n.callMethod ?
-                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
             };
             if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
             n.queue = []; t = b.createElement(e); t.async = !0;
